--- a/molly/demos/molly_oxford/site-media/css/groups/smart.css
+++ b/molly/demos/molly_oxford/site-media/css/groups/smart.css
@@ -472,3 +472,16 @@ table.real-time-information tr {
     border-top: 1px solid #FFBF00;
 }
 
+button, input[type="submit"], input[type="reset"] {
+    display: inline-block;
+        color: #fff;
+    	background: #838791 url(../../png/new/buttons/btn.bg.png) repeat-x 0px 0px;
+    	padding:5px 10px 6px 10px;
+    	font-weight:bold;
+    	text-shadow: 1px 1px 1px #111;
+    	border:1px solid rgba(0,0,0,0.4);
+    	-moz-border-radius: 5px;
+    	-moz-box-shadow: 0px 0px 2px rgba(0,0,0,0.5);
+    	-webkit-border-radius: 5px;
+    	-webkit-box-shadow: 0px 0px 2px rgba(0,0,0,0.5);
+}
