--- a/molly/molly/apps/z3950/templates/z3950/item_holdings_detail.html
+++ b/molly/molly/apps/z3950/templates/z3950/item_holdings_detail.html
@@ -61,11 +61,11 @@
 {% if library.oxpoints_id and library.oxpoints_location %}
     {% ifnotequal style_group "dumb" %}
     	<div class="backgrounded-image" style="background-image:url('{% map_url library.oxpoints_location %}'); height:{{ map_height }}px">
-            {% include "maps/map_elements.html" %}
+            {% include "places/map_elements.html" %}
         </div>
     {% else %}
         <img src="{% map_url library.oxpoints_location %}" alt="Map"><br />
-        {% include "maps/map_elements.html" %}
+        {% include "places/map_elements.html" %}
     {% endifnotequal %}
 {% endif %}
 
