Adding build timestamps to service status, removing a bit of cruft from results releases

--- a/molly/demos/molly_oxford/apps/results/templates/results/index.html
+++ b/molly/demos/molly_oxford/apps/results/templates/results/index.html
@@ -2,13 +2,7 @@
 
 {% block content %}
 
-
-<div class="section">
-    <h2>About results releases</h2>
-    <div class="note"><div class="bubble pad-10">
-        This page lists the last twenty schools to have had results released. You can check your results using Student Self-Service from a desktop browser.
-    </div></div>
-</div>
+<p class="help-bubble top">This page lists the last twenty schools to have had results released. You can check your results using Student Self-Service from a desktop browser.</p>
 
 
 {% regroup items by pubDate as is %}
