--- a/molly/molly/apps/service_status/templates/service_status/index.html
+++ b/molly/molly/apps/service_status/templates/service_status/index.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-{% for slug, name, statuses, announcements in services %}
+{% for slug, name, lastBuildDate, statuses, announcements in services %}
 <div class="section">
-  <h2>{{ name }}</h2>
+  <h2>{{ name }} <small>at {{ lastBuildDate|date:"G:i D, j F Y" }}</small></h2>
   {% if announcements %}
   <h3>Service announcements</h3>
   
@@ -19,7 +19,7 @@
   </ul>
 {% endif %}
 
-  <h3>Services</h3>
+
 
   <ul class="service-status">
 {% for status in statuses %}
