--- a/molly/molly/apps/home/templates/home/index.html
+++ b/molly/molly/apps/home/templates/home/index.html
@@ -1,4 +1,5 @@
 {% extends "home/base.html" %}
+{% load molly_apps_weather %}
 {% load portal_misc %}{% load maps %}{% load molly_apps_search %}
 
 {% block title %}Mobile Oxford{% endblock %}
@@ -45,9 +46,23 @@
     </div>
     </div>
     
-    <div class="bubble"><div class="center pad-10">
+    <div class="bubble pad-5">
+        <table style="width:100%; text-align:center;">
+            <tbody>
+                <tr>
+                    <td>
       {% oxford_date_today %}
-    </div></div>
+                    </td>
+                    <td>
+      {% weather %}<big>{{ weather.temperature }}&deg;C</big>, {{ weather.get_outlook_display|capfirst }} and {{ weather.get_visibility_display }}
+                    </td>
+                </tr>
+                <tr colspan="2">
+
+                </tr>    
+            </tbody>
+        </table>
+    </div>
     
     <ul class="stand-alone">
             <li class="round-top"><a href="{% url home:static_about %}">About this site</a></li>
