--- a/molly/molly/apps/places/templates/places/index.html
+++ b/molly/molly/apps/places/templates/places/index.html
@@ -48,7 +48,7 @@
 
 {# Points of Interest #}
 <div class="section">
-  <h2>Browse Points of Interest</h2>
+  <h2>Points of Interest</h2>
   {% include "geolocation/update_location_embed.html" %}
   <ul>
     <li><a href="{% url places:nearby_list %}">Near Me</a></li>
