Tidied up secure/authenticated views and added Sakai back into settings.APPLICATIONS.

--- a/molly/molly/auth/templates/auth/secure.html
+++ b/molly/molly/auth/templates/auth/secure.html
@@ -2,6 +2,6 @@
 
 {% block bottom_links %}{{ block.super }}<br/>
   <a href="{% url auth:index %}">Security preferences</a><br/>
-  <a href="{% url auth:clear_session %}?return_url={{ path }}">Clear secure session</a>
+  <a href="{% url auth:clear_session %}?return_url={{ full_path }}">Clear secure session</a>
 {% endblock %}
     
