--- a/molly/demos/molly_oxford/templates/desktop/container.html
+++ b/molly/demos/molly_oxford/templates/desktop/container.html
@@ -34,12 +34,12 @@
       </div>
     <div class="navigation">
       <ul>
-        <li{% ifequal page "about" %} class="selected"{% endifequal %}><a id="link-about" href="{% url home:exposition "" %}">About</a></li>
-        <li{% ifequal page "features" %} class="selected"{% endifequal %}><a id="link-features" href="{% url home:exposition "" %}features/">Features</a></li>
-{#        <li{% ifequal page "accessing" %} class="selected"{% endifequal %}><a id="link-accessing" href="{% url home:xposition "" %}accessing/">Accessing</a></li> #}
-{#        <li{% ifequal page "get-involved" %} class="selected"{% endifequal %}><a id="link-get-involved" href="{% url home:exposition "" %}get-involved/">Get involved</a></li> #}
-        <li{% ifequal page "blog" %} class="selected"{% endifequal %}><a id="link-blog" href="{% url home:exposition "" %}blog/">Blog</a></li>
-{#        <li{% ifequal page "help" %} class="selected"{% endifequal %}><a id="link-help" href="{% url home:exposition "" %}help/">Help</a></li> #}
+        <li{% ifequal page "about" %} class="selected"{% endifequal %}><a id="link-about" href="{% url desktop:index "" %}">About</a></li>
+        <li{% ifequal page "features" %} class="selected"{% endifequal %}><a id="link-features" href="{% url desktop:index "" %}features/">Features</a></li>
+{#        <li{% ifequal page "accessing" %} class="selected"{% endifequal %}><a id="link-accessing" href="{% url desktop:index "" %}accessing/">Accessing</a></li> #}
+{#        <li{% ifequal page "get-involved" %} class="selected"{% endifequal %}><a id="link-get-involved" href="{% url desktop:index "" %}get-involved/">Get involved</a></li> #}
+        <li{% ifequal page "blog" %} class="selected"{% endifequal %}><a id="link-blog" href="{% url desktop:index "" %}blog/">Blog</a></li>
+{#        <li{% ifequal page "help" %} class="selected"{% endifequal %}><a id="link-help" href="{% url desktop:index "" %}help/">Help</a></li> #}
       </ul>
     </div>
       <a href="http://www.ox.ac.uk/">
