Mushed things around and added more content.

--- a/mollyproject.org/base.css
+++ b/mollyproject.org/base.css
@@ -33,11 +33,17 @@ ul.navigation {
     text-align: left;
     margin: 1em;
     margin-top: 0em;
+    padding-left: 0;
+    margin-left: 0;
+
 }
 #header ul li, ul.navigation li {
 	display:inline;
 	padding: 0.5em 1em;
     border-left: 1px solid #ccc;
+}
+ul.navigation li:first-child {
+    padding-left: 0;
 }
 #header ul li:first-child, ul.navigation li:first-child {border: 0;}
 #header p {margin-bottom: 1em;}
