--- a/molly/demos/molly_oxford/templates/static/about.html
+++ b/molly/demos/molly_oxford/templates/static/about.html
@@ -1,44 +1,61 @@
-<div class="section">
-    <h2>About this site</h2>
-
-    <div class="note"><div class="bubble pad-10">
-    Mobile Oxford was produced as part of the
-    <a href="http://erewhon.oucs.ox.ac.uk/">Erewhon Project</a>, a
-    <a href="http://www.jisc.ac.uk/">JISC</a>-funded project to explore the
-    provision of location-aware applications and adaption of Weblearn (Oxford's implementation of the Sakai VLE) for use on
-    mobile devices. <br />
-    
-    It is designed and managed by Tim Fernando and Alexander Dutton at Oxford University Computing Services.
-    </div></div>
+<div class="bubble pad-10" id="flag">
+  <h2 style="color:#002147;">About this site</h2>
+  <div>
+    <p>
+      Mobile Oxford was produced as part of the
+      <a href="http://erewhon.oucs.ox.ac.uk/">Erewhon Project</a>, a
+      <a href="http://www.jisc.ac.uk/">JISC</a>-funded project to explore the
+      provision of location-aware applications and adaption of Weblearn (Oxford's implementation of the Sakai VLE) for use on
+      mobile devices.
+    </p>
+    <p>
+      It is designed and managed by the Erewhon Team at Oxford University Computing Services.
+    </p>
+  </div>
 </div>
 
-<div class="section">
-    <h2>Credits</h2>
-    <div class="note"><div class="bubble pad-10">
-        <p>
-        The Erewhon team would like to thank the following organisations
-        for providing the data used in the Portal:
-        </p>
+<div class="bubble pad-10" id="flag">
+  <h2 style="color:#002147;">Credits</h2>
+  <div>
+    <p>
+      The Erewhon team would like to thank the following organisations for
+      providing the data used in this site:
+    </p>
         
-        <dl>
-			<dt>Dailyinfo</dt>
-			<dt>Association of Train Operating Companies</dt>
-            <dt>Oxontime</dt>
-			<dt>Oxfordshire County Council</dt>
-			<dt>Stagecoach, Oxford Bus Company &amp; Thames Travel</dt>
-			<dt>BBC</dt>
-            <dt>Edina</dt>
-            <dt>OpenStreetMap and Contributors</dt>
-            <dt>Oxford University Estates Department</dt>
-            <dt>Oxford University Library Services</dt>
-			<dt>Cloudmade</dt>
-        </dl>
-    </div></div>
+    <dl>
+      <dt>Association of Train Operating Companies</dt>
+      <dt>Oxontime</dt>
+      <dt>Oxfordshire County Council</dt>
+      <dt>Stagecoach, Oxford Bus Company &amp; Thames Travel</dt>
+      <dt>BBC</dt>
+      <dt>OpenStreetMap and Contributors</dt>
+      <dt>Oxford University Estates Department</dt>
+      <dt>Oxford University Library Services</dt>
+      <dt>Cloudmade</dt>
+      <dt>Oxford University Rowing Clubs</dt>
+    </dl>
+  </div>
 </div>
 
-<div class="section">
-	<h2>Be aware</h2>
-	<div class="note"><div class="bubble pad-10">
-		<p>
-			Using Mobile Oxford may incur a cost of data transmission from your network provider. Many providers now offer "unlimited" day, week or month passes, please check with your provider for more information.</p>
-</div></div></div>
+<div class="bubble pad-10">
+  <h2 style="color:#002147;">Data usage</h2>
+  <div>
+    <p>
+      Using Mobile Oxford may incur a cost of data transmission from your
+      network provider. Many providers now offer "unlimited" day, week or
+      month passes, please check with your provider for more information.
+    </p>
+  </div>
+</div>
+
+<div class="bubble pad-10" id="flag">
+  <h2 style="color:#002147;">Isis and Godstow flag statuses</h2>
+  <div>
+    <p>Mobile Oxford updates from the Oxford University Rowing Clubs website approximately every ten minutes, and may lag behind.</p>
+    <p>It is important to note that the flag status applies only to the stream speed and as such must be taken as only a part of the cox,
+    crew and coach’s risk assessment before each outing. The flag does not mean it is necessarily safe for those unrestricted but rather
+    it is deemed necessarily unsafe for those restricted.</p>
+    <p>NB: over the vacation period when the flag is not being updated it will appear grey and all stream condition queries should be directed towards the EA.</p>
+    
+  </div>
+</div>
