places/entity_detail.html now looks for a meta_refresh entry in an entity's metadata and if present generates a meta refresh tag. Oxontime now sets this to 60 (seconds).

--- a/molly/molly/apps/places/templates/places/entity_detail.html
+++ b/molly/molly/apps/places/templates/places/entity_detail.html
@@ -1,5 +1,8 @@
 {% extends "places/base.html" %}{% load maps %}{% load portal_misc %}
 
+{% block extrahead %}{% if entity.metadata.meta_refresh %}
+<meta http-equiv="refresh" content="{{ entity.metadata.meta_refresh }}" />{% endif %}{% endblock %}
+
 {% block content %}
 
 
