Fixed time format on flag status updated time (from "H:m" to "H:i").

--- a/molly/demos/molly_oxford/templates/home/index.html
+++ b/molly/demos/molly_oxford/templates/home/index.html
@@ -67,7 +67,7 @@
                 </tr>  
                 <tr>
                   <td colspan="2">
-                    Correct at {{ flag_status.0.updated|date:"H:m" }} ({{ flag_status.0.updated|timesince }} ago). <a href="{% url home:static_about %}#flag">Disclaimer</a>
+                    Correct at {{ flag_status.0.updated|date:"H:i" }} ({{ flag_status.0.updated|timesince }} ago). <a href="{% url home:static_about %}#flag">Disclaimer</a>
                   </td>
                 </tr>  
             </tbody>
