--- a/molly/demos/brookes/templates/static/about.html
+++ b/molly/demos/brookes/templates/static/about.html
@@ -1,14 +1,20 @@
 <div class="section">
-    <h2>About this site</h2>
+    <h2>About Brookes Mobile</h2>
 
     <div class="note"><div class="bubble pad-10">
-    Mobile Oxford was produced as part of the
-    <a href="http://erewhon.oucs.ox.ac.uk/">Erewhon Project</a>, a
-    <a href="http://www.jisc.ac.uk/">JISC</a>-funded project to explore the
-    provision of location-aware applications and adaption of Weblearn (Oxford's implementation of the Sakai VLE) for use on
-    mobile devices. <br />
+    Mobile Brookes is being deeveloped through a collaborative 
+    <a href="http://www.jisc.ac.uk/">JISC</a>-funded project involving Oxford University and Oxford Brookes University.
+    The aim is to implement Oxford University's online portal for mobile devices, Mobile Oxford (the product of a previous
+     JISC- funded project), in a different institution and explore the adaptations required to make it work effectively in its new context.
+     <br /> <br />
+     The core project team includes: <br /> <br />
+     Richard Francis - Project Sponsor (Oxford Brookes) <br />
+     Sebastian Rahtz - Project Sponsor (Oxford) <br /> <br/>
+     Helen Thomson - Project Manager (Oxford Brookes ) <br />
+     Tim Fernando - Project Manager (Oxford) <br /> <br />    
+     Ashit Gajwani - Portal Developer (Oxford Brookes) <br />
+     Alexander Dutton - Portal Developer (Oxford)
     
-    It is designed and managed by Tim Fernando and Alexander Dutton at Oxford University Computing Services.
     </div></div>
 </div>
 
@@ -16,7 +22,7 @@
     <h2>Credits</h2>
     <div class="note"><div class="bubble pad-10">
         <p>
-        The Erewhon team would like to thank the following organisations
+        The Mobile Brookes would like to thank the following organisations
         for providing the data used in the Portal:
         </p>
         
@@ -29,9 +35,8 @@
 			<dt>BBC</dt>
             <dt>Edina</dt>
             <dt>OpenStreetMap and Contributors</dt>
-            <dt>Oxford University Estates Department</dt>
-            <dt>Oxford University Library Services</dt>
-			<dt>Cloudmade</dt>
+            <dt>Oxford University Computing Service</dt>
+            <dt>Cloudmade</dt>
         </dl>
     </div></div>
 </div>
@@ -40,5 +45,5 @@
 	<h2>Be aware</h2>
 	<div class="note"><div class="bubble pad-10">
 		<p>
-			Using Mobile Oxford may incur a cost of data transmission from your network provider. Many providers now offer "unlimited" day, week or month passes, please check with your provider for more information.</p>
+			Using Brookes Mobile may incur a cost of data transmission from your network provider. Many providers now offer "unlimited" day, week or month passes, please check with your provider for more information.</p>
 </div></div></div>
