--- a/molly/molly/apps/contact/templates/contact/index.html
+++ b/molly/molly/apps/contact/templates/contact/index.html
@@ -7,11 +7,13 @@
 {% include "contact/search_form.html" %}
 
 <div class="section">
-  <h2>University contacts</h2>
+  <h2>Brookes University contacts</h2>
   <ul>
-    <li><a class="phone" href="tel:+441865270000">General enquiries<br /><small>01865 (2)70000</small></a></li>
-    <li><a class="phone" href="tel:+441865280000">Switchboard<br /><small>01865 (2)80000</small></a></li>
-    <li class="round-bottom"><a class="phone" href="tel:+441865273200">Computing Services help desk<br /><small>01865 (2)73200</small></a></li>
+    <li><a class="phone" href="tel:+441865484848">General enquiries<br /><small>01865 484848</small></a></li>
+    <li><a class="phone" href="tel:+441865741111">Switchboard<br /><small>01865 741111</small></a></li>
+    <li><a class="phone" href="tel:+441865483311">IT helpdesk (Headington)<br /><small>01865 483311</small></a></li>
+    <li><a class="phone" href="tel:+441865485801">IT helpdesk (Wheatley)<br /><small>01865 485801</small></a></li>
+    <li class="round-bottom"><a class="phone" href="tel:+441865488266">IT helpdesk (Harcourt Hill)<br /><small>01865 488266</small></a></li>
   </ul>
 </div>
 
@@ -19,8 +21,9 @@
   <h2>Emergency contacts</h2>
   <ul>
     <li><a class="phone" href="tel:112">Emergency services<br /><small>112</small></a></li>
-    <li><a class="phone" href="tel:+441865289999">University security <small>(emergency)<br />01865 (2)89999</small></a></li>
-    <li><a class="phone" href="tel:+441865272944">University security <small>(enquiries)<br />01865 (2)72944</small></a></li>
+    <li><a class="phone" href="tel:+441865483060">Headington campus security <small><br />01865 483060</small></a></li>
+    <li><a class="phone" href="tel:+441865485853">Wheatley campus security <small><br />01865 485853</small></a></li>
+    <li><a class="phone" href="tel:+441865639677">Harcourt campus security <small><br />01865 639677</small></a></li>
     <li class="round-bottom"><a class="phone" href="tel:+448458505505">Thames Valley Police <small>(non-emergency)<br />08458 505505</small></a></li>
   </ul>
 </div>
@@ -29,6 +32,8 @@
   <h2>Health and welfare</h2>
   <ul>
     <li><a class="phone" href="tel:+448454647">NHS Direct<br /><small>0845 46 47</small></a></li>
+    <li><a class="phone" href="tel:+441865483193">University Doctor appointment line <small>(8.30am to 6pm semester time)<br />01865 483193</small></a></li>
+    <li><a class="phone" href="tel:+441865242334">Emergency Doctor <small>(for emergency advice out of hours and during vacations)<br />01865 242334</small></a></li>
     <li><a class="phone" href="tel:+441865270300">University Counselling Service<br /><small>01865 (2)70300</small></a></li>
     <li><a class="phone" href="tel:+441865270270">Oxford Nightline<br /><small>01865 (2)70270</small></a></li>
     <li><a class="phone" href="tel:+441865726295">Rape Crisis<br /><small>01865 726295</small></a></li>
