Changed search form submission URL from "." to "", as the former slightly broke the ajax_loading stuff.

--- a/molly/molly/apps/search/templates/search/index.html
+++ b/molly/molly/apps/search/templates/search/index.html
@@ -55,7 +55,7 @@
 {# Universal Search Form #}
 <div class="section">
 	<div class="form">
-  <form method="get" action=".">
+  <form method="get" action="">
     <h2>
       {{ search_form.query.label }}{% if search_form.application %} {{ search_form.cleaned_data.application }}{% endif %}
     </h2>
